<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:backgroundTint="#c38989">

    <Spinner
        android:id="@+id/workout_selector"
        android:layout_width="173dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:spinnerMode="dropdown"
        android:backgroundTint="#c38989">
    </Spinner>

    <requestFocus />

    <EditText
        android:id="@+id/workout_reps"
        android:layout_width="53dp"
        android:layout_height="match_parent"
        android:hint="@string/workout_hint"
        android:inputType="number"
        android:backgroundTint="#c38989" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unit_selector"
        android:checkedButton="@+id/sound">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:id="@+id/min"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:id="@+id/reps"
        android:checked="false" />
    </RadioGroup>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:weightSum="1"
        android:backgroundTint="#c38989">

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:orientation="horizontal"
            android:layout_below="@+id/workout_reps"
            android:layout_alignEnd="@+id/workout_reps"
            android:backgroundTint="#c38989" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="lbs"
            android:id="@+id/textView"
            android:backgroundTint="#c38989"
            android:layout_weight="0.22" />

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/converter_button"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_weight="0.13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="317dp"
            android:layout_height="281dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/answer"
            android:layout_weight="0.88" />

        <Button
            android:id="@+id/reset"
            android:layout_width="63dp"
            android:layout_height="36dp"
            android:hint="@string/reset"
            android:layout_gravity="bottom" />

    </LinearLayout>


</LinearLayout>
